Add apps to menu

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -757,6 +757,7 @@
 /* Apps */
 "app" = "Приложение";
 "apps" = "Приложения";
+"my_apps" = "Мои Приложения";
 "all_apps" = "Все приложения";
 "installed_apps" = "Мои приложения";
 "own_apps" = "Управление";
