Переклад: Можливість поперед.перегляду нотаток

--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -384,6 +384,11 @@
 "edit_note" = "Редагувати нотатку";
 "actions" = "Дії";
 "notes_start_screen" = "За допомогою нотаток Ви можете ділитися подіями з життя з друзями, а також бути в курсі того, що відбувається у них.";
+"note_preview" = "Попередній перегляд";
+"note_preview_warn" = "Увага: Це всього лише попередній перегляд";
+"note_preview_warn_details" = "Після збереження, нотатки можуть мати інший вигляд.  Також не викликайте перегляд занадто часто.";
+"note_preview_empty_err" = "Попередній перегляд неможливий: Немає імені чи змісту.";
+
 "edited" = "Відредаговано";
 
 "notes_zero" = "Жодної нотатки";
