Додано до меню "Мої додатки"

--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -758,6 +758,7 @@
 /* Apps */
 "app" = "Застосунок";
 "apps" = "Застосунки";
+"my_apps" = "Мої Застосунки";
 "all_apps" = "Всі застосунки";
 "installed_apps" = "Мої застосунки";
 "own_apps" = "Керування";
