--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -563,9 +563,9 @@
 "two_factor_authentication_login" = "У вас увімкнена двофакторна автентифікація. Для входу введіть код отриманий в додатку.";
 
 "two_factor_authentication_settings_1" = "Двофакторну автентифікацію через TOTP можна використовувати навіть без інтернету. Для цього вам знадобиться застосунок для генерації кодів, наприклад Google Authenticator для Android та iOS або відкриті <b>Aegis Authenticator чи andOTP</b> для Android. Важливо: на пристрої має бути точна дата та час.";
-"two_factor_authentication_settings_2" = "Використовуючи додаток для двофакторної автентифікації, відскануйте наведений нижче QR-код:";
+"two_factor_authentication_settings_2" = "Використовуючи застосунок для двофакторної автентифікації, відскануйте наведений нижче QR-код:";
 "two_factor_authentication_settings_3" = "або вручну введіть секретний ключ: <b>$1</b>.";
-"two_factor_authentication_settings_4" = "Тепер введіть код, який вам надав додаток, і пароль від вашої сторінки, щоб ми могли підтвердити, що ви дійсно ви.";
+"two_factor_authentication_settings_4" = "Тепер введіть код, який вам надав застосунок, і пароль від вашої сторінки, щоб ми могли підтвердити, що ви дійсно ви.";
 
 "connect" = "Підключити";
 "enable" = "Включити";
@@ -771,7 +771,7 @@
 
 "create_app" = "Створити застосунок";
 "edit_app" = "Редагувати застосунок";
-"new_app" = "Новий додаток";
+"new_app" = "Новий застосунок";
 "app_news" = "Нотатка з новинами";
 "app_state" = "Стан";
 "app_enabled" = "Увімкнено";
@@ -807,13 +807,13 @@
 
 "appjs_sperm_request" = "Запит доступу";
 "appjs_sperm_requests" = "запитує доступ до";
-"appjs_sperm_can" = "Додаток зможе";
+"appjs_sperm_can" = "Застосунок зможе";
 "appjs_sperm_allow" = "Дозволити";
 "appjs_sperm_disallow" = "Відхилити";
 
-"app_uninstalled" = "Додаток вимкнено";
+"app_uninstalled" = "Застосунок вимкнено";
 "app_uninstalled_desc" = "Вона не зможе виконувати дії від вашого імені.";
-"app_err_not_found" = "Додаток не знайдено";
+"app_err_not_found" = "Застосунок не знайдено";
 "app_err_not_found_desc" = "Неправильний ідентифікатор або його вимкнено.";
 "app_err_forbidden_desc" = "Ця програма не ваша.";
 "app_err_url" = "Неправильна адреса";
