--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -778,15 +778,15 @@
 "app_creation_hint_url" = "Вкажіть в URL точну адресу разом зі схемою (https), портом (80) та потрібними параметрами запиту.";
 "app_creation_hint_iframe" = "Ваш застосунок буде відкритий в iframe.";
 "app_balance" = "На рахунку вашої програми <b>$1</b> голосів.";
-"app_users" = "Вашим додатком користуються <b>$1</b> користувачів.";
+"app_users" = "Вашим застосунком користуються <b>$1</b> користувачів.";
 "app_withdrawal" = "Виведення коштів";
 "app_withdrawal_q" = "вивести?";
-"app_withdrawal_empty" = "Не вдалося вивести: Значення не може бути від'ємним";
+"app_withdrawal_empty" = "Не вдалося вивести: Значення не може бути пустим";
 "app_withdrawal_created" = "Заявку на виведення $1 голосів було створено. Чекайте на зарахування.";
 
 "appjs_payment" = "Оплата покупки";
-"appjs_payment_intro" = "Ви збираєтеся сплатити замовлення в додатку";
-"appjs_order_items" = "Склад замовлення";
+"appjs_payment_intro" = "Ви збираєтеся сплатити замовлення в застосунку";
+"appjs_order_items" = "Деталі замовлення";
 "appjs_payment_total" = "Підсумкова сума до оплати";
 "appjs_payment_confirm" = "Сплатити";
 "appjs_err_funds" = "Не вдалося сплатити покупку: недостатньо коштів.";
@@ -812,16 +812,16 @@
 "appjs_sperm_disallow" = "Відхилити";
 
 "app_uninstalled" = "Застосунок вимкнено";
-"app_uninstalled_desc" = "Вона не зможе виконувати дії від вашого імені.";
+"app_uninstalled_desc" = "Він не зможе виконувати дії від вашого імені.";
 "app_err_not_found" = "Застосунок не знайдено";
-"app_err_not_found_desc" = "Неправильний ідентифікатор або його вимкнено.";
-"app_err_forbidden_desc" = "Ця програма не ваша.";
-"app_err_url" = "Неправильна адреса";
-"app_err_url_desc" = "Адреса програми не пройшла перевірку, переконайтеся, що вона вказана правильно.";
+"app_err_not_found_desc" = "Неправильний ідентифікатор або застосунок вимкнено.";
+"app_err_forbidden_desc" = "Цей застосунок не ваш.";
+"app_err_url" = "Некоректна адреса";
+"app_err_url_desc" = "Адреса застосунку не пройшла перевірку, переконайтеся, що вона вказана правильно.";
 "app_err_ava" = "Не вдалося завантажити аватарку";
 "app_err_ava_desc" = "Аватарка занадто велика чи крива: помилка загального характеру №$res.";
 "app_err_note" = "Не вдалося прикріпити замітку новин";
-"app_err_note_desc" = "Переконайтеся, що посилання правильне і замітка належить вам.";
+"app_err_note_desc" = "Переконайтеся, що посилання правильне і нотатка належить вам.";
 
 /* Support */
 
