--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -777,7 +777,7 @@
 "app_enabled" = "Увімкнено";
 "app_creation_hint_url" = "Вкажіть в URL точну адресу разом зі схемою (https), портом (80) та потрібними параметрами запиту.";
 "app_creation_hint_iframe" = "Ваш застосунок буде відкритий в iframe.";
-"app_balance" = "На рахунку вашої програми <b>$1</b> голосів.";
+"app_balance" = "На рахунку вашого застосунку <b>$1</b> голосів.";
 "app_users" = "Вашим застосунком користуються <b>$1</b> користувачів.";
 "app_withdrawal" = "Виведення коштів";
 "app_withdrawal_q" = "вивести?";
