Українська локаль: Перекладено нововведення - "Додатки" (#677)

--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -74,6 +74,7 @@
 "description" = "Опис";
 "save" = "Зберегти";
 "main_information" = "Основна інформація";
+"additional_information" = "Додаткова інформація";
 "nickname" = "Нікнейм";
 "online" = "Онлайн";
 "was_online" = "був у мережі";
@@ -384,6 +385,11 @@
 "edit_note" = "Редагувати нотатку";
 "actions" = "Дії";
 "notes_start_screen" = "За допомогою нотаток Ви можете ділитися подіями з життя з друзями, а також бути в курсі того, що відбувається у них.";
+"note_preview" = "Попередній перегляд";
+"note_preview_warn" = "Увага: Це всього лише попередній перегляд";
+"note_preview_warn_details" = "Після збереження, нотатки можуть мати інший вигляд. Також не викликайте перегляд занадто часто.";
+"note_preview_empty_err" = "Попередній перегляд неможливий: Немає імені чи змісту.";
+
 "edited" = "Відредаговано";
 
 "notes_zero" = "Жодної нотатки";
@@ -557,9 +563,9 @@
 "two_factor_authentication_login" = "У вас увімкнена двофакторна автентифікація. Для входу введіть код отриманий в додатку.";
 
 "two_factor_authentication_settings_1" = "Двофакторну автентифікацію через TOTP можна використовувати навіть без інтернету. Для цього вам знадобиться застосунок для генерації кодів, наприклад Google Authenticator для Android та iOS або відкриті <b>Aegis Authenticator чи andOTP</b> для Android. Важливо: на пристрої має бути точна дата та час.";
-"two_factor_authentication_settings_2" = "Використовуючи додаток для двофакторної автентифікації, відскануйте наведений нижче QR-код:";
+"two_factor_authentication_settings_2" = "Використовуючи застосунок для двофакторної автентифікації, відскануйте наведений нижче QR-код:";
 "two_factor_authentication_settings_3" = "або вручну введіть секретний ключ: <b>$1</b>.";
-"two_factor_authentication_settings_4" = "Тепер введіть код, який вам надав додаток, і пароль від вашої сторінки, щоб ми могли підтвердити, що ви дійсно ви.";
+"two_factor_authentication_settings_4" = "Тепер введіть код, який вам надав застосунок, і пароль від вашої сторінки, щоб ми могли підтвердити, що ви дійсно ви.";
 
 "connect" = "Підключити";
 "enable" = "Включити";
@@ -748,6 +754,74 @@
 "coins_other" = "$1 голосів";
 
 "users_gifts" = "Подарунки";
+
+/* Apps */
+"app" = "Застосунок";
+"apps" = "Застосунки";
+"my_apps" = "Мої Застосунки";
+"all_apps" = "Всі застосунки";
+"installed_apps" = "Мої застосунки";
+"own_apps" = "Керування";
+"own_apps_alternate" = "Мої застосунки";
+
+"app_play" = "запустити";
+"app_uninstall" = "вимкнути";
+"app_edit" = "редагувати";
+"app_dev" = "Розробник";
+
+"create_app" = "Створити застосунок";
+"edit_app" = "Редагувати застосунок";
+"new_app" = "Новий застосунок";
+"app_news" = "Нотатка з новинами";
+"app_state" = "Стан";
+"app_enabled" = "Увімкнено";
+"app_creation_hint_url" = "Вкажіть в URL точну адресу разом зі схемою (https), портом (80) та потрібними параметрами запиту.";
+"app_creation_hint_iframe" = "Ваш застосунок буде відкритий в iframe.";
+"app_balance" = "На рахунку вашого застосунку <b>$1</b> голосів.";
+"app_users" = "Вашим застосунком користуються <b>$1</b> користувачів.";
+"app_withdrawal" = "Виведення коштів";
+"app_withdrawal_q" = "вивести?";
+"app_withdrawal_empty" = "Не вдалося вивести: Значення не може бути пустим";
+"app_withdrawal_created" = "Заявку на виведення $1 голосів було створено. Чекайте на зарахування.";
+
+"appjs_payment" = "Оплата покупки";
+"appjs_payment_intro" = "Ви збираєтеся сплатити замовлення в застосунку";
+"appjs_order_items" = "Деталі замовлення";
+"appjs_payment_total" = "Підсумкова сума до оплати";
+"appjs_payment_confirm" = "Сплатити";
+"appjs_err_funds" = "Не вдалося сплатити покупку: недостатньо коштів.";
+
+"appjs_wall_post" = "Опублікувати пост";
+"appjs_wall_post_desc" = "хоче опублікувати на вашій стіні пост";
+
+"appjs_sperm_friends" = "вашим Друзям";
+"appjs_sperm_friends_desc" = "додавати користувачів у друзі та читати ваш список друзів";
+"appjs_sperm_wall" = "вашій Стіні";
+"appjs_sperm_wall_desc" = "дивитися ваші новини, вашу стіну та створювати на ній пости";
+"appjs_sperm_messages" = "вашим повідомленням";
+"appjs_sperm_messages_desc" = "читати та писати від вашого імені повідомлення";
+"appjs_sperm_groups" = "вашим Спільнотам";
+"appjs_sperm_groups_desc" = "дивитися список ваших груп та підписувати вас на інші";
+"appjs_sperm_likes" = "функціоналу Лайків";
+"appjs_sperm_likes_desc" = "ставити та прибирати позначки \"мені подобається\" із записів";
+
+"appjs_sperm_request" = "Запит доступу";
+"appjs_sperm_requests" = "запитує доступ до";
+"appjs_sperm_can" = "Застосунок зможе";
+"appjs_sperm_allow" = "Дозволити";
+"appjs_sperm_disallow" = "Відхилити";
+
+"app_uninstalled" = "Застосунок вимкнено";
+"app_uninstalled_desc" = "Він не зможе виконувати дії від вашого імені.";
+"app_err_not_found" = "Застосунок не знайдено";
+"app_err_not_found_desc" = "Неправильний ідентифікатор або застосунок вимкнено.";
+"app_err_forbidden_desc" = "Цей застосунок не ваш.";
+"app_err_url" = "Некоректна адреса";
+"app_err_url_desc" = "Адреса застосунку не пройшла перевірку, переконайтеся, що вона вказана правильно.";
+"app_err_ava" = "Не вдалося завантажити аватарку";
+"app_err_ava_desc" = "Аватарка занадто велика чи крива: помилка загального характеру №$res.";
+"app_err_note" = "Не вдалося прикріпити замітку новин";
+"app_err_note_desc" = "Переконайтеся, що посилання правильне і нотатка належить вам.";
 
 /* Support */
 
