New strings for en_US + some fixes for ru_RU

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -790,19 +790,19 @@
 "appjs_payment_confirm" = "Оплатить";
 "appjs_err_funds" = "Не удалось оплатить покупку: недостаточно средств.";
 
-"appjs_wall_post" = "Опубликовать пост";
-"appjs_wall_post_desc" = "хочет опубликовать на вашей стене пост";
+"appjs_wall_post" = "Опубликовать запись";
+"appjs_wall_post_desc" = "хочет опубликовать на Вашей стене запись";
 
 "appjs_sperm_friends" = "вашим Друзьям";
-"appjs_sperm_friends_desc" = "добавлять пользователей в друзья и читать ваш список друзей";
+"appjs_sperm_friends_desc" = "добавлять пользователей в друзья и читать Ваш список друзей";
 "appjs_sperm_wall" = "вашей Стене";
-"appjs_sperm_wall_desc" = "смотреть ваши новости, вашу стену и создавать на ней посты";
+"appjs_sperm_wall_desc" = "смотреть Ваши новости, Вашу стену и создавать на ней записи";
 "appjs_sperm_messages" = "вашим Сообщениям";
-"appjs_sperm_messages_desc" = "читать и писать от вашего имени сообщения";
+"appjs_sperm_messages_desc" = "читать и писать от Вашего имени сообщения";
 "appjs_sperm_groups" = "вашим Сообществам";
-"appjs_sperm_groups_desc" = "смотреть список ваших групп и подписывать вас на другие";
+"appjs_sperm_groups_desc" = "смотреть список Ваших групп и подписывать вас на другие";
 "appjs_sperm_likes" = "функционалу Лайков";
-"appjs_sperm_likes_desc" = "ставить и убирать отметки \"мне нравится\" с записей";
+"appjs_sperm_likes_desc" = "ставить и убирать отметки \"Мне нравится\" с записей";
 
 "appjs_sperm_request" = "Запрос доступа";
 "appjs_sperm_requests" = "запрашивает доступ к";
@@ -811,16 +811,16 @@
 "appjs_sperm_disallow" = "Не разрешать";
 
 "app_uninstalled" = "Приложение отключено";
-"app_uninstalled_desc" = "Оно больше не сможет выполнять действия от вашего имени.";
+"app_uninstalled_desc" = "Оно больше не сможет выполнять действия от Вашего имени.";
 "app_err_not_found" = "Приложение не найдено";
 "app_err_not_found_desc" = "Некорректный идентифиактор или оно было отключено.";
-"app_err_forbidden_desc" = "Это приложение не ваше.";
+"app_err_forbidden_desc" = "Это приложение не Ваше.";
 "app_err_url" = "Неправильный адрес";
 "app_err_url_desc" = "Адрес приложения не прошёл проверку, убедитесь что он указан правильно.";
 "app_err_ava" = "Не удалось загрузить аватарку";
 "app_err_ava_desc" = "Аватарка слишком большая или кривая: ошибка общего характера №$res.";
 "app_err_note" = "Не удалось прикрепить новостную заметку";
-"app_err_note_desc" = "Убедитесь что ссылка правильная и заметка принадлежит вам.";
+"app_err_note_desc" = "Убедитесь, что ссылка правильная и заметка принадлежит Вам.";
 
 /* Support */
 
