--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1137,7 +1137,7 @@
 "bug_tracker_hidden_comment" = "Скрытый комментарий";
 "bug_tracker_report_not_found" = "Отчёт не найден. Возможно, он был удалён.";
 "bug_tracker_status_open" = "Открыт";
-"bug_tracker_status_under_review" = "На рассмотрении":
+"bug_tracker_status_under_review" = "На рассмотрении";
 "bug_tracker_status_in_progress" = "В работе";
 "bug_tracker_status_fixed" = "Исправлен";
 "bug_tracker_status_closed" = "Закрыт";
