"Вы были исключены из программы ОВК Тестерс"

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1220,3 +1220,5 @@
 "bug_tracker_comment_sent" = "Комментарий отправлен.";
 "bug_tracker_fields_error" = "Заполнены не все поля.";
 "bug_tracker_reproduced_text" = "Вы отметили, что у Вас получилось воспроизвести этот баг.";
+"bug_tracker_banned_1" = "Извините, <b>$1</b>, но Вы были исключены из программы <b>OVK Testers</b>.";
+"bug_tracker_banned_2" = "А причина этому проста: <b>$1</b>. К сожалению, на этот раз нам пришлось исключить Вас навсегда.";
