--- a/locales/su.strings
+++ b/locales/su.strings
@@ -881,3 +881,6 @@
 "transfer_ton_contents" = "Вы можете пополнить ваш баланс с помощью криптовалюты ТОН. Достаточно отсканировать КуАр-код приложением Tonkeeper, или вручную отправить ТОН по реквизитам. В течении нескольких минут вам придут определенное количество рублей.";
 "transfer_ton_address" = "<b>Адрес кошелька:</b> $1<br/><b>Содержание телеграммы:</b> $2";
 "transfer_ton_currency_per_ton" = "$1 TON";
+
+"about_links" = "Ссылки";
+"instance_links" = "Ссылки страны:";
