--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1184,5 +1184,6 @@
 /* Away */
 
 "url_is_banned" = "Переход невозможен";
-"url_is_banned_comment" = "Администрация <b>$1</b> запретила переход по этой ссылке.<br><br>Причина: <b>$2</b>";
+"url_is_banned_comment" = "Администрация <b>$1</b> запретила переход по этой ссылке.";
+"url_is_banned_comment_r" = "Администрация <b>$1</b> запретила переход по этой ссылке.<br><br>Причина: <b>$2</b>";
 "url_is_banned_default_reason" = "Ссылка, по которой вы попытались перейти, может вести на сайт, который был создан с целью обмана пользователей и получения за счёт этого прибыли.";
