locales: Soviet: Add new strings

--- a/locales/su.strings
+++ b/locales/su.strings
@@ -873,3 +873,16 @@
 "email_rate_limit_error" = "Нельзя делать это так часто, извините.";
 
 "email_verify_success" = "Ваша регистрация была подтверждена. Приятного времяпрепровождения!";
+
+"you_still_have_x_points" = "У Вас <b>$1</b> неиспользованных совестких рублей.";
+"top_up_your_account" = "Пополнить баланс";
+
+"transfer_trough_ton" = "Пополнить с помощью ТОН";
+"transfer_ton_contents" = "Вы можете пополнить ваш баланс с помощью криптовалюты ТОН. Достаточно отсканировать КуАр-код приложением Tonkeeper, или вручную отправить ТОН по реквизитам. В течении нескольких минут вам придут определенное количество рублей.";
+"transfer_ton_address" = "<b>Адрес кошелька:</b> $1<br/><b>Содержание телеграммы:</b> $2";
+"transfer_ton_currency_per_ton" = "$1 TON";
+
+"about_links" = "Ссылки";
+"instance_links" = "Ссылки страны:";
+
+"my_apps" = "Досуг и отдых";
