--- a/locales/en.strings
+++ b/locales/en.strings
@@ -173,6 +173,15 @@
 "wall_other" = "$1 posts";
 "publish_post" = "Add post";
 "view_other_comments" = "View other comments";
+"wall_archive" = "Archive";
+"wall_do_archive" = "Archive";
+"wall_do_unarchive" = "Restore";
+"wall_archive_succ" = "The post has been archived";
+"wall_archive_succ_descr" = "Now it's in the archive.";
+"wall_unarchive_succ" = "The post has been restored";
+"wall_unarchive_succ_descr" = "Now it's visible to users again.";
+"show_more" = "Show more...";
+"hide_collapsed" = "Hide text";
 
 "no_comments" = "No comments";
 
