--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -880,8 +880,13 @@
 "banned_header" = "Вы были верискокнуты";
 "banned_alt" = "Пользователь заблокирован.";
 "banned_1" = "Извините, <b>$1</b>, но вы были верискокнуты.";
-"banned_2" = "А причина этому проста: <b>$1</b>. К сожалению, на этот раз нам пришлось заблокировать вас навсегда.";
+"banned_2" = "А причина этому проста: <b>$1</b>.";
+"banned_perm" = "К сожалению, на этот раз нам пришлось заблокировать вас навсегда";
+"banned_until_time" = "На этот раз нам пришлось заблокировать вас до <b>$1</b>";
 "banned_3" = "Вы всё ещё можете <a href=\"/support?act=new\">написать в службу поддержки</a>, если считаете что произошла ошибка или <a href=\"/logout?hash=$1\">выйти</a>.";
+"banned_unban_myself" = "Разблокировать себя";
+"banned_unban_title" = "Ваш аккаунт разблокирован";
+"banned_unban_description" = "Постарайтесь больше не нарушать правила.";
 
 /* Registration confirm */
 
