--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1111,6 +1111,8 @@
 "admin_commerce_disabled" = "Коммерция отключена системным администратором";
 "admin_commerce_disabled_desc" = "Настройки ваучеров и подарков будут сохранены, но не будут оказывать никакого влияния.";
 
+"admin_privacy_warning" = "Будьте осторожны с этой информацией";
+
 /* Paginator (deprecated) */
 
 "paginator_back" = "Назад";
@@ -1174,3 +1176,8 @@
 
 "cookies_popup_content" = "Все дети любят печенье, поэтому этот веб-сайт использует Cookies для того, чтобы идентифицировать вашу сессию и ничего более. Ознакомьтесь с нашей <a href='/privacy'>политикой конфиденциальности</a> для получения дополнительной информации.";
 "cookies_popup_agree" = "Согласен";
+
+/* Blacklist */
+
+"blacklist" = "Чёрный список";
+"user_blacklisted_you" = "Пользователь внёс Вас в чёрный список.";
