--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1062,6 +1062,8 @@
 "admin_commerce_disabled" = "Commerce has been disabled by the system administrator";
 "admin_commerce_disabled_desc" = "The voucher and gift settings will be saved, but will have no effect.";
 
+"admin_privacy_warning" = "Be careful with this information";
+
 /* Paginator (deprecated) */
 
 "paginator_back" = "Back";
@@ -1115,3 +1117,8 @@
 
 "cookies_popup_content" = "All kids love cookie, so this website uses Cookies to identify your session and nothing more. Check <a href='/privacy'>our privacy policy</a> for more information.";
 "cookies_popup_agree" = "Accept";
+
+/* Blacklist */
+
+"blacklist" = "Blacklist";
+"user_blacklisted_you" = "This user has blacklisted you.";
