--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -1,5 +1,3 @@
-#include <ru>
-
 "__locale" = "uk_UA.utf8;Ukr";
 "__WinEncoding" = "Windows-1251";
 
@@ -453,6 +451,7 @@
 "avatar" = "Аватар";
 "privacy" = "Приватність";
 "interface" = "Зовнішній вид";
+"security" = "Безпека";
 
 "profile_picture" = "Зображення сторінки";
 
@@ -527,6 +526,7 @@
 "ui_settings_view_of_posts_old" = "Старий";
 "ui_settings_view_of_posts_microblog" = "Мікроблог";
 "ui_settings_main_page" = "Головна сторінка";
+"ui_settings_sessions" = "Сеанси";
 
 "additional_links" = "Додаткові посилання";
 "ad_poster" = "Рекламний плакат";
@@ -554,6 +554,11 @@
 "profile_deactivated_info" = "Сторінку користувача видалено.<br/>Подробиці недоступні.";
 
 "share_with_friends" = "Розповісти друзям";
+
+"end_all_sessions" = "Завершити всі сеанси";
+"end_all_sessions_description" = "Якщо ви хочете вийти з $1 на всіх пристроях, натисніть кнопку нижче";
+
+"end_all_sessions_done" = "<b>Усі</b> сеанси було завершено";
 
 /* Two-factor authentication */
 
