--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -885,9 +885,14 @@
 "banned_title" = "Обліковий запис заблоковано";
 "banned_header" = "Ваш обліковий запис заблоковано.";
 "banned_alt" = "Користувача заблоковано.";
-"banned_1" = "<b>$1</b>, ваш акаунт заблоковано за порушення правил користування сайту.";
-"banned_2" = "Підстава: <b>$1</b>. На цей раз, нам довелося заблокувати вас назавжди.";
+"banned_1" = "<b>$1</b>, ваш обліковий запис заблоковано за порушення правил користування сайту.";
+"banned_2" = "Привід: <b>$1</b>.";
+"banned_perm" = "На цей раз, Ви заблоковані назавжди.";
+"banned_until_time" = "На цей раз, Ви заблоковані до <b>$1</b>";
 "banned_3" = "Ви все ще можете <a href=\"/support?act=new\">написати в службу підтримки</a>, якщо вважаєте, що сталася помилка або <a href=\"/logout?hash= $1\">вийти</a>.";
+"banned_unban_myself" = "Розблокувати сторінку";
+"banned_unban_title" = "Ваш обліковий запис розблокований";
+"banned_unban_description" = "Намагайтеся, більше не порушувати правила.";
 
 /* Registration confirm */
 
