--- a/locales/en.strings
+++ b/locales/en.strings
@@ -159,6 +159,7 @@
 "write" = "Write";
 "publish" = "Publish";
 "delete" = "Delete";
+"restore" = "Restore";
 "comments" = "Comments";
 "share" = "Share";
 "pin" = "Pin";
