--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -165,6 +165,7 @@
 "write" = "Написать";
 "publish" = "Опубликовать";
 "delete" = "Удалить";
+"restore" = "Восстановить";
 "comments" = "Комментарии";
 "share" = "Поделиться";
 "pin" = "Закрепить";
