--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1187,6 +1187,7 @@
 "edit_action" = "Изменить";
 "transfer" = "Передать";
 "close" = "Закрыть";
+"success" = "Успех";
 
 "warning" = "Внимание";
 "question_confirm" = "Это действие нельзя отменить. Вы действительно уверены в том что хотите сделать?";
@@ -1204,6 +1205,8 @@
 
 "blacklist" = "Чёрный список";
 "user_blacklisted_you" = "Пользователь внёс Вас в чёрный список.";
+"user_blacklisted" = "$1 занесён в чёрный список."
+"user_removed_from_the_blacklist" = "$1 удалён из чёрного списка."
 
 /* Away */
 
