--- a/locales/en.strings
+++ b/locales/en.strings
@@ -518,6 +518,7 @@
 "support_new_title" = "Enter the topic of your ticket";
 "support_new_content" = "Describe the issue or suggestion";
 
+"reports" = "Reports";
 "ignore_report" = "Ignore report";
 "report_number" = "Report #";
 "list_of_reports" = "List of reports";
