--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -15,6 +15,7 @@
 "password" = "Пароль";
 "registration" = "Регистрация";
 "forgot_password" = "Забыли пароль?";
+"checkbox_in_registration" = "Я согласен с <a href="/privacy">политикой конфедициальности</a> и <a href="/about">правилами сайта</a>";
 
 "login_failed" = "Не удалось войти";
 "invalid_username_or_password" = "Неверное имя пользователя или пароль. <a href='/restore'>Забыли пароль?</a>";
