Карточка Агента Поддержки

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1206,3 +1206,7 @@
 "url_is_banned_default_reason" = "Ссылка, по которой вы попытались перейти, может вести на сайт, который был создан с целью обмана пользователей и получения за счёт этого прибыли.";
 "url_is_banned_title" = "Ссылка на подозрительный сайт";
 "url_is_banned_proceed" = "Перейти по ссылке";
+
+/* Helpdesk */
+"helpdesk" = "Поддержка";
+"helpdesk_agent" = "Агент Поддержки";
