--- a/locales/en.strings
+++ b/locales/en.strings
@@ -69,6 +69,9 @@
 "gender" = "Gender";
 "male" = "male";
 "female" = "female";
+"non-binary" = "non-binary";
+"other" = "other";
+"other_gender_placeholder" = "I refer to myself as...";
 "description" = "Description";
 "save" = "Save";
 "main_information" = "Main information";
