--- a/locales/en.strings
+++ b/locales/en.strings
@@ -72,6 +72,7 @@
 "non-binary" = "non-binary";
 "other" = "other";
 "other_gender_placeholder" = "I refer to myself as...";
+"hidden" = "not specified";
 "description" = "Description";
 "save" = "Save";
 "main_information" = "Main information";
