--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1208,3 +1208,23 @@
 "url_is_banned_default_reason" = "Ссылка, по которой вы попытались перейти, может вести на сайт, который был создан с целью обмана пользователей и получения за счёт этого прибыли.";
 "url_is_banned_title" = "Ссылка на подозрительный сайт";
 "url_is_banned_proceed" = "Перейти по ссылке";
+
+/* Chandler */
+
+"c_user_removed_from_group" = "Пользователь был удалён из группы";
+"c_permission_removed_from_group" = "Право было удалено из группы";
+"c_group_removed" = "Группа была удалена.";
+"c_groups" = "Группы Chandler";
+"c_users" = "Пользователи Chandler";
+"c_group_permissions" = "Права";
+"c_group_members" = "Участники";
+"c_model" = "Модель";
+"c_permission" = "Право";
+"c_permissions" = "Права";
+"c_color" = "Цвет";
+"add" = "Добавить";
+"c_edit_groups" = "Редактировать группы";
+"c_user_is_not_in_group" = "Связь пользователя и группы не найдена.";
+"c_permission_not_found" = "Связь права и группы не найдена.";
+"c_group_not_found" = "Группа не найдена.";
+"c_user_is_already_in_group" = "Этот пользователь уже включён в эту группу.";
